Bug 1700211 - Set titlebarSeparatorStyle = NSTitlebarSeparatorStyleNone on the floating full screen titlebar NSWindow to eliminate flickering line. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D109988